--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 # JDBC properties
 #
 spring.datasource.url=jdbc:mysql://localhost:3306/main?useSSL=false&serverTimezone=UTC
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=admin2
+spring.datasource.password=admin2
 
 #
 # Spring Data Rest properties
