--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@
 # JDBC properties
 #
 spring.datasource.url=jdbc:mysql://localhost:3306/main?useSSL=false&serverTimezone=UTC
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
 
 
 #
