Add file upload page (with drag'n'drop script)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,16 @@ spring.datasource.password=springstudent
 # spring.data.rest.base-path=/rest
 spring.data.rest.default-page-size=20
 
+
+#
+# Storage Service properties
+#
+
+# max file size
+spring.servlet.multipart.max-file-size=15MB
+
+# max request size
+spring.servlet.multipart.max-request-size=15MB
+
+# files storage location (stores all files uploaded via REST API)
+#storage.location=./files
