--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,37 @@
-#
-# JDBC properties
-#
+
+######### JDBC properties #########
 spring.datasource.url=jdbc:mysql://localhost:3306/main?useSSL=false&serverTimezone=UTC
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 
-
-
-#
-# Spring Data Rest properties
-#
+######### Spring Data Rest properties #########
 # spring.data.rest.base-path=/rest
-spring.data.rest.default-page-size=20
+# spring.data.rest.default-page-size=20
 
-
-#
-# Storage Service properties
-#
-
-# max file size
+######### Storage Service properties #########
+# max file size #
 spring.servlet.multipart.max-file-size=15MB
 
-# max request size
+# max request size #
 spring.servlet.multipart.max-request-size=15MB
 
-# files storage location (stores all files uploaded via REST API)
-#storage.location=./files
+# files storage location (stores all files uploaded via REST API) #
+# storage.location=./files
+
+###### JPA Properties ######
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+# spring.jpa.generate-ddl = true
+# spring.jpa.show-sql = true
+
+######### Email Properties #########
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.username = ***
+spring.mail.password = ***
+spring.mail.properties.mail.smtp.starttls.required = true
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.connectiontimeout = 5000
+spring.mail.properties.mail.smtp.timeout = 5000
+spring.mail.properties.mail.smtp.writetimeout = 5000
+spring.mail.default-encoding=UTF-8
