--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/main?useSSL=false&serverTimezo
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 
+######### AWS Java SDK #########
+aws.access.key.id = ****
+aws.access.key.secret = ****
+aws.region = ****
+aws.s3.audio.bucket = ****
+
 ######### Spring Data Rest properties #########
 # spring.data.rest.base-path=/rest
 # spring.data.rest.default-page-size=20
@@ -27,8 +33,8 @@ spring.servlet.multipart.max-request-size=15MB
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
 spring.mail.properties.mail.smtp.starttls.enable = true
-spring.mail.username = ***
-spring.mail.password = ***
+spring.mail.username = ****
+spring.mail.password = ****
 spring.mail.properties.mail.smtp.starttls.required = true
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
